<resources>
    <string name="app_name">BUILDUDE</string>
    <string name="email">ENTER EMAIL ADDRESS</string>\
    <string name="password">ENTER PASSWORD</string>
    <string name="login">LOGIN</string>

    <string name="photo">PHOTO</string>\
    <string name="gallery">GALLERY</string>
    <string name="pdf">PDF</string>
    <string name="brochure">BROCHURE</string>


    <string name="loginas">LOGIN AS</string>
    <string name="mobnum">ENTER MOBILE NUMBER</string>
    <string name="existinguser">   LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="username">ENTER USER NAME</string>
    <string name="cpass">ENTER CONFIRM PASSWORD</string>
    <string name="labour">LABOR</string>
    <string name="contractor"> CONTRACTOR NAME</string>
    <string name="forgetpass"> FORGET PASSWORD?</string>
    <string name="forget"> Forget Your Password?</string>
    <string name="resetpass"> Reset Your Password</string>
    <string name="newpass"> NEW PASSWORD</string>
    <string name="conpass"> CONFIRM PASSWORD</string>
    <string name="reset"> RESET</string>
    <string name="enter"> Enter your mobile number and We will send you code to reset your password</string>

    <string name="newuser">SIGNUP</string>
    <string name="age">ENTER AGE</string>
    <string name="address">LIOSONING IN</string>
    <string name="gender">SELECT GENDER</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="wage">ENTER WAGE RATE</string>
    <string name="hour">ENTER WORKING HOUR</string>
    <string name="transport">ENTER MODE OF TRANSPORT</string>
    <string name="particulararea1">WORK LOCATION AREA 1</string>
    <string name="particulararea2">WORK LOCATION AREA 2</string>
    <string name="daily">DAILY</string>
    <string name="weekly">WEEKLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="category">SELECT CATEGORY OF LABOR</string>
    <string name="welcomelabor">WELCOME TO BUILDUDE LABOR DASHBOARD PLEASE FILL THE FOLLOWING FOR LATEST JOB OFFER</string>
    <string name="register">SIGN UP</string>
    <string name="workmode">INTERESTED TO WORK ON</string>
    <string name="welcomecontractor">WELCOME TO BUILDUDE CONTRACTOR DASHBOARD PLEASE FILL THE FOLLOWING DETAILS</string>
    <string name="welcomeowner">WELCOME TO BUILDUDE CONTRACTOR DASHBOARD PLEASE FILL THE FOLLOWING DETAILS</string>
    <string name="welcomeeng">WELCOME TO BUILDUDE CONTRACTOR DASHBOARD PLEASE FILL THE FOLLOWING DETAILS</string>
    <string name="welcomearchitect">WELCOME TO BUILDUDE CONTRACTOR DASHBOARD PLEASE FILL THE FOLLOWING DETAILS</string>
    <string name="welcomedev">WELCOME TO BUILDUDE CONTRACTOR DASHBOARD PLEASE FILL THE FOLLOWING DETAILS</string>
    <string name="devdashboard">DEVELOPER DASHBOARD</string>
    <string name="devprofile">DEVELOPER PROFILE</string>
    <string name="jobdetail">JOB DEATAILS</string>
    <string name="workinghour">FIELD OF WORK</string>
    <string name="requiredlabor">ADDITIONAL INFORMATION</string>
    <string name="areaofoperation"> AREA OF OPERATION</string>
    <string name="submit">SUBMIT</string>
    <string name="sendotp">SEND OTP</string>
    <string name="logout">LOGOUT</string>
    <string name="welocme">WELCOME TO </string>
    <string name="presentedby">PRESENTED BY</string>
    <string name="click">CLICK BELOW FOR LOGIN/REGISTRATION</string>
    <string name="title_activity_maps">MAP</string>


    <string name="contractormain">CONTRACTOR</string>
    <string name="labormain">LABOURER</string>
    <string name="architectmain">ARCHITECT</string>
    <string name="engineermain">ENGINEER</string>
    <string name="developermain">DEVELOPER</string>
    <string name="owenermain">OWNER</string>


    <string name="title_activity_map_tracking">MAP ROUTE TRACKING</string>
    <string name="track_path_on_map">WALK AND ROUTE YOUR PATH ON MAP</string>
    <string name="permission_notice">Please note that your location permission is important if you want to draw your route on map while walking or running</string>
    <string name="permission_title">LOCATION PERMISSION DENIED</string>
    <string name="cancel_permission_notice">Wow, please come back again when you need it and grant the permission</string>
    <string name="starttracking">START TRACKING</string>
    <string name="location">YOUR LOCATION</string>
    <string name="jobtitle">NAME OF WORK</string>
    <string name="jobdetails">AREA OF WORK</string>
    <string name="jobwages">SCOPE OF WORK</string>
    <string name="scope">SCOPE OF WORK</string>
    <string name="jobarea">ENTER DATE AND TIME</string>
    <string name="labortype">JOB WORK</string>
    <string name="post">POST JOB</string>
    <string name="jobtitle1">JOB TITLE : </string>
    <string name="type">LABOR TYPE: </string>
    <string name="approve_rej">JOB APPROVE/REJECT </string>
    <string name="jobdetails1">JOB DETAILS : </string>
    <string name="pincode1">PIN CODE : </string>
    <string name="datee">DATE : </string>
    <string name="jobarea1">JOB LOCATION :   </string>
    <string name="jobwages1">JOB WAGES : </string>
    <string name="start">START LOCATION UPDATE </string>
    <string name="clicktoapply">CLICK TO APPLY FOR THE JOB</string>
    <string name="laborprofile">LABOUR PROFILE</string>
    <string name="ownerdashboard">OWNER DASHBOARD</string>
    <string name="ownerprofile">OWNER PROFILE</string>
    <string name="engprofile">ENGINEER PROFILE</string>


    <!-- <string name="timeOutError">Connection timed out. Please try again with stable connection</string>
    <string name="noConnectionError">It seems that no proper connection has been established. Please try again with a stable internet connection</string>
    <string name="authFailureError">Connection authentication has failed. Please logout and login again to proceed.</string>
    <string name="serverError">Oops! Server error. Please try after sometime.</string>
    <string name="networkError">It seems like there is some problem with the network. Please try again.</string>
    <string name="parseError">It seems like there is some problem with the parsing of data. Please try again.</string>
    <string name="internal_error">Oops! Seems like an internal error. Please try again.</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="title_activity_maps_track_labor">Map</string>-->
    <string name="don_t_have_an_account">DONT HAVE AN ACCOUNT ?</string>
    <string name="reg_id">REGISTERD ID:</string>
    <string name="pjob">POST JOB</string>
    <string name="profile">PROFILE</string>
    <string name="appreject">ACCEPT JOB</string>
    <string name="tracklabor">TRACK LABOR</string>
    <string name="registername">WELCOME</string>
    <string name="wages">PAYMENT</string>
    <string name="job">JOB AREA: </string>
    <string name="labourname">LABOR NAME: </string>
    <string name="postjob1">POST DETAILS</string>
    <string name="status">STATUS : </string>
    <string name="cname">CONTRACTOR NAME:  </string>
    <string name="dateofappy">JOB POSTING DATE : </string>
    <string name="appr">APPROVE </string>
    <string name="notappr"> NOT APPROVE </string>
    <string name="transferdone"> MONEY TRANSFER DONE </string>

    <string name="jobpostedby">JOB POSTED BY :</string>
    <string name="labourdashboard">LABOUR DASHBOARD</string>
    <string name="done">DONE</string>
    <string name="onhold">ON HOLD</string>
    <string name="approve">APPROVE</string>
    <string name="reject"> REJECT</string>
    <string name="sendmoney">SEND MONEY</string>
    <string name="joboffer">JOB OFFER</string>
    <string name="review">REVIEW</string>
    <string name="jobstats">JOB STATUS</string>
    <string name="paymentStatus">PAYMENT</string>
    <string name="alljobs">JOB SUMMARY</string>
    <string name="refrename">ENTER REFERRAL NAME</string>
    <string name="refcode">ENTER REFERRAL MOBILE NUMBER</string>
    <string name="postjob">POST DETAILS</string>
    <string name="labornum">LABOR ID</string>
    <string name="contractordashboard">CONTRACTOR DASHBOARD</string>
    <string name="contractorprofile">CONTRACTOR PROFILE</string>
    <string name="giverating">FEEDBACK</string>
    <string name="architectdashboard">ARCHITECT DASHBOARD</string>
    <string name="architectprofile">ARCHITECT PROFILE</string>
    <string name="enginerdashboard">ENGINEER DASHBOARD</string>
    <string name="title">JOB TITLE</string>
    <string name="payment">JOB WAGES</string>
    <string name="area">JOB AREA :</string>
    <string name="time">TIME ON SITE</string>
    <string name="string">LATEST JOB POST ARE SHOWN BELOW</string>
    <string name="paysuccess">Previous Payment Status Successful</string>
    <string name="date">DATE : </string>
    <string name="contractorname">CONTRACTOR NAME : </string>
    <string name="jobexpired">JOB EXPIRED</string>
    <string name="postfee">POST DETAILS</string>
    <string name="jobposting">NAME OF WORK</string>
    <string name="acceptjob">ACCEPT JOB</string>
    <string name="applystatus">APPLIED</string>
    <string name="flowchart">FLOW CHART</string>
    <string name="postworkjob">POST WORK/JOB</string>
    <string name="acceptproposal">ACCEPT PROPOSAL</string>
    <string name="rating">FEEDBACK</string>
    <string name="flowcharts">FLOW CHART</string>
    <string name="service">SERVICES</string>
    <string name="fee">FEE  %</string>
    <string name="specific">SPECIFIC EXPERTISE</string>
    <string name="expertsing">EXPERIENCE IN YEARS</string>
    <string name="approvejob">APPROVE/REJECT JOB</string>
    <string name="jobstatsss">ACCEPT JOB</string>
    <string name="pincode">ENTER PINCODE</string>
    <string name="workinghourchange">WORKING HOURS ON SITE</string>
    <string name="requiredlaborupdate">REQUIRED LABOUR ON</string>
    <string name="addresspin">ENTER PINCODE</string>
    <string name="workinghoursite">WORKING HOURS ON SITE</string>
    <string name="nameofwork">NAME OF WORK</string>
    <string name="approvedfrom">APPROVAL FROM</string>
    <string name="servicerequired">SERVICE REQUIRED</string>
    <string name="jobstatustt">Congratulations Your Request for the Job is approved</string>
    <string name="latestjob">Latest Job Post Are Shown Below</string>
    <string name="wagess">WAGES</string>
    <string name="jobstatus">JOB STATUS</string>
    <string name="sendwages">SEND WAGES</string>
    <string name="paymetsend">PAYMENT</string>
    <string name="alreadymember">Already a Member ?</string>
    <string name="paymentsss">PAYMENT</string>
    <string name="registermember">Already a Member ?</string>
    <string name="alertmeg">Confirmation Alert</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="meg">ARE YOU SURE WANT TO LOGOUT?</string>
    <string name="ya">YES</string>
    <string name="na">NO</string>
    <string name="already">Already a Member ?</string>
    <string name="select">Select Language</string>
    <string name="select_wage">SELECT WAGE RANGE</string>
    <string name="labourid">LABOR ID :</string>
    <string name="title_activity_maps_two">Map</string>


</resources>
