<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Labour.WriteReview"
    android:background="@color/blue_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_200"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gradient"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/review"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_25sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rating"
                android:textColor="@color/red_900"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"></TextView>

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></RatingBar>

            <Button
                android:id="@+id/submit"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/capsulebutton"
                android:text="@string/submit"
                android:textColor="@color/colorBackground"
                android:textSize="@dimen/_15sdp"></Button>


        </LinearLayout>

    </LinearLayout>

</ScrollView>